Create product_category_list API.
